# tome

./: README.md  docker-compose.override.example.yml  docker-compose.yml  example.env
backend/: .dockerignore  README.md  dev.dockerfile  gunicorn_config.py  optimised.dockerfile  pyproject.toml
backend/migrations/: __init__.py  __main__.py  _version_template.py  ver_000_001.py  ver_000_002.py  ver_000_003.py  ver_000_004.py
backend/scripts/: check  format  lint  mypy
backend/templates/email/: signup_confirm.txt
backend/tests/: conftest.py  test_app.py  test_email.py  test_exception_handlers.py  test_utils.py
backend/tests/controllers/: test_auth.py  test_password.py
backend/tests/middleware/: test_auth2.py  test_request_context.py
backend/tome/: app.py  database.py  email.py  exception_handlers.py  exceptions.py  responses.py  routing.py  settings.py  utils.py
backend/tome/controllers/: auth.py  password.py
backend/tome/middleware/: auth.py  request_context.py  server_error.py
backend/tome/models/: user.py
backend/tome/routes/: __init__.py  account.py  api_key.py  auth.py  node.py  signup.py
backend/tome/settings/: __init__.py  core.py  database.py  email.py  jwt.py  signup.py
docs/: apikeys.md  rest_api.md  settings.md
frontend/: .dockerignore  .editorconfig  .eslintrc.js  dev.dockerfile  package-lock.json  package.json  prod.dockerfile  vue.config.js
frontend/src/: App.vue
frontend/src/components/: Footer.vue  Node.vue  Password.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/store/: account.js  apikeys.js  index.js  login.js  twoFactor.js
frontend/src/views/: Home.vue  Login.vue  Logout.vue  Settings.vue
frontend/src/views/settings/: APIKeys.vue  Account.vue  Display.vue  TwoFactor.vue
