[tool.poetry]
name = "tome"
version = "0.0.1"
description = "A notebook and wiki app built for how you think"
authors = ["pxeger <_@pxeger.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.4"
asyncpg = "^0.20.1"
aiosmtplib = "^1.1.3"
orjson = "^3.2.0"
pyjwt = "^1.7.1"
argon2-cffi = "^20.1.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
flake9 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"
hacking = "^3.1.0"
flake8-bugbear = "^20.1.4"
isort = "^4.3.21"
pytest = "^5.4.3"
uvicorn = "^0.11.5"
httpx = "^0.13.3"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.14.0"

[tool.flake8]
max_line_length = 88
ignore = "E501,W503,H301,H306"
enable_extensions = "H106"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
